[gd_scene load_steps=17 format=2]

[ext_resource path="res://scene/player/walk/player-down2.png" type="Texture" id=1]
[ext_resource path="res://scene/player/HeldItem.gd" type="Script" id=2]
[ext_resource path="res://scene/player/MouseRotationPlayerController.gd" type="Script" id=3]
[ext_resource path="res://scene/player/walk/player-down.png" type="Texture" id=4]
[ext_resource path="res://scene/player/walk/player-downRight.png" type="Texture" id=5]
[ext_resource path="res://scene/player/walk/player-downRight2.png" type="Texture" id=6]
[ext_resource path="res://scene/player/walk/player-right.png" type="Texture" id=7]
[ext_resource path="res://scene/player/walk/player-right2.png" type="Texture" id=8]
[ext_resource path="res://scene/player/walk/player-upRight2.png" type="Texture" id=9]
[ext_resource path="res://scene/player/walk/player-up.png" type="Texture" id=10]
[ext_resource path="res://scene/player/walk/player-upRight.png" type="Texture" id=11]
[ext_resource path="res://scene/player/walk/player-up2.png" type="Texture" id=12]
[ext_resource path="res://scene/player/ItemDetector.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "moveDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "moveRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "moveDownRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "moveUpRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "moveUp",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 77.3672, 62.245 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.5103
height = 45.3058

[node name="Player" type="KinematicBody2D"]
position = Vector2( -2, -9 )
collision_layer = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.84302, -12.6439 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "moveDownRight"

[node name="MoveController" type="Node2D" parent="."]
visible = false
script = ExtResource( 3 )
movePixelsPerSecond = 149
kinematicBody2DPath = NodePath("..")

[node name="ItemDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 2147483650
collision_mask = 8
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetector"]
visible = false
position = Vector2( -3.77551, -12.7423 )
shape = SubResource( 4 )

[node name="HeldItem" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Right" type="Position2D" parent="HeldItem"]
position = Vector2( 48.507, -12.5981 )

[node name="Left" type="Position2D" parent="HeldItem"]
position = Vector2( -52.2867, -13.228 )

[node name="Down" type="Position2D" parent="HeldItem"]
position = Vector2( 0.629944, 29.6093 )

[node name="Up" type="Position2D" parent="HeldItem"]
position = Vector2( -2.5199, -44.0961 )

[node name="UpLeft" type="Position2D" parent="HeldItem"]
position = Vector2( -51.6567, -45.356 )

[node name="UpRight" type="Position2D" parent="HeldItem"]
position = Vector2( 47.8771, -47.2459 )

[node name="DownLeft" type="Position2D" parent="HeldItem"]
position = Vector2( -51.0267, 20.1599 )

[node name="DownRight" type="Position2D" parent="HeldItem"]
position = Vector2( 46.6171, 22.6797 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.8877, -1.41577 )
rotation = 1.5708
shape = SubResource( 3 )
[connection signal="facingChange" from="MoveController" to="HeldItem" method="_on_MoveController_facingChange"]
[connection signal="area_entered" from="ItemDetector" to="ItemDetector" method="_on_ItemDetector_area_entered"]
[connection signal="area_exited" from="ItemDetector" to="ItemDetector" method="_on_ItemDetector_area_exited"]
[connection signal="itemPickupRequested" from="ItemDetector" to="HeldItem" method="_on_ItemDetector_itemPickupRequested"]
